# dndc

./: .gitattributes  .gitignore  CMakeLists.txt  EXAMPLE.dnd  Makefile  OVERVIEW.dnd  README.dnd  README.md  REFERENCE.dnd  compiler_warnings.h  defs.mak  lldb_stuff.py  meson.build  opt.mak  opt.mak.template  qt.mak  setup.py  todo.dnd
Allocators/: allocator.c  allocator.h  arena_allocator.h  linear_allocator.h  linear_allocator_forward.h  mallocator.h  nullacator.h  recording_allocator.h  recording_allocator_forward.h  testing_allocator.h
Bugs/: Cflag-is-weird.bug  browser-widget-for-gui-editors.bug  checkboxes.bug  clarify-logging.bug  cleanup-error-codes.bug  comment-attr.bug  css-vulnerable.bug  delete-dndcjsflags.bug  delete-text-node.bug  depth-counter.bug  drag-links-coord-helper.bug  extensive-examples.bug  filesystem-abstraction.bug  floating-gui-editor.bug  foo.py  generate-tags.bug  get-rid-of-builtin-files.bug  gui-behaviors.bug  gui-editors-scroll-text-into-view.bug  import-attribute.bug  jshighlighting.bug  labeled-inputs.bug  map-editing.bug  move-html-gen-out-of-main-thread.bug  native-windows-ui.bug  nodeflags.bug  persistent-worker.bug  polish-jsvars.bug  protect-against-javascript-protocol.bug  python-add-link.bug  raw-nodes-in-untrusted-mode.bug  recycle-context.bug  release-10.bug  removepython.bug  rename-nav-to-toc.bug  root-shouldnt-be-its-own-parent.bug  scroll-gui-editor-position-based-on-the-map.bug  some-node-apis-dont-accept-strings-as-nodes.bug  tree-widget-for-gui-editor.bug
Bugs/Punted/: filesystem-abstraction.bug  move-html-gen-out-of-main-thread.bug  native-windows-ui.bug  protect-against-javascript-protocol.bug  tree-widget-for-gui-editor.bug
Bugs/Resolved/: checkboxes.bug  clarify-logging.bug  cleanup-error-codes.bug  coverage.bug  css-vulnerable.bug  delete-dndcjsflags.bug  depth-counter.bug  dont-import-flag.bug  drag-links-coord-helper.bug  extensive-examples.bug  fish-completions.bug  generate-tags.bug  get-rid-of-builtin-files.bug  gui-editors-scroll-headers-into-view.bug  gui-editors-scroll-text-into-view.bug  polish-jsvars.bug  protect-against-javascript-protocol.bug  raw-nodes-in-untrusted-mode.bug  release-10.bug  rename-nav-to-toc.bug  root-shouldnt-be-its-own-parent.bug  scroll-gui-editor-position-based-on-the-map.bug  some-node-apis-dont-accept-strings-as-nodes.bug
Bugs/WontFix/: labeled-inputs.bug  map-editing.bug  utf16-version-of-dndc.bug
Data/: TestBase64.c  base64.h  json_util.h
DataStructure/: Marray.h
DndC/: TestDndC.c  dndc.c  dndc.h  dndc.mak  dndc_api_def.h  dndc_context.c  dndc_flags.h  dndc_format.c  dndc_funcs.h  dndc_htmlgen.c  dndc_node_types.h  dndc_parser.c  dndc_python.c  dndc_types.h  dndcfuzz.c  pydndc.c  pydndc.pyi
Dndc/: AttrTable.h  TESTEXAMPLES.h  TestAttrTable.c  TestDndc.c  TestDndcAlloc.c  TestDndcAst.c  TestMsbExtension.c  TestQJS.c  TestStringTable.c  bb_extensions.h  common_macros.h  dndc.c  dndc.h  dndc.mak  dndc_api_def.h  dndc_ast.h  dndc_browse.c  dndc_cli.c  dndc_context.c  dndc_credits.h  dndc_expand.c  dndc_file_cache.c  dndc_file_cache.h  dndc_format.c  dndc_funcs.h  dndc_htmlgen.c  dndc_js.h  dndc_js_api.d.ts  dndc_local_server.c  dndc_local_server.h  dndc_logging.c  dndc_logging.h  dndc_long_string.h  dndc_md.c  dndc_node_types.h  dndc_parser.c  dndc_python.c  dndc_python.pyi  dndc_qjs.c  dndc_qjs.d.ts  (+15 more)
Docs/: REFERENCE.dnd
Documentation/: OVERVIEW.dnd  REFERENCE.dnd  index.dnd
EditorSupport/: readme.txt
EditorSupport/vim/: dnd_outline.py  dndc_highlight.py  install.py
EditorSupport/vim/ftdetect/: dnd.vim
EditorSupport/vim/ftplugin/: dnd.vim
EditorSupport/vim/syntax/: dnd.vim
Examples/: highlight-python.dnd  index.dnd
Examples/Calendar/: calendar.css  calendar.dnd
Examples/CodeHighlighting/: highlight-python.dnd  pyexample.dnd
Examples/HobswellManor/: add.py  hobswell-manor-before.dnd  hobswell-manor.dnd
Examples/KrugsBasement/: dungeon.css  krugs-basement.dnd
Examples/Rules/: characters.dnd  common.css  index.dnd  mechanics.dnd  religion.dnd  rules.dnd
Examples/Wiki/: flat.dnd  index.dnd  lorem.dnd  wiki.dnd
Examples/Wiki/Inner/: hello.dnd
Platform/Linux/: linux.mak
Platform/MacOS/: DndBrInfo.plist  Info.plist  dndbr.m  filetree.h  filetree.m  filewatchcache.h  filewatchcache.m  gdndc.m  macos.mak  nsstr_util.h
Platform/RPi32/: rpi.mak
Platform/Wasm/: allstd.h  demo.dnd  dndc_wasm.c  jsinter.h  stdlib.h  wasm.mak  wasm_simd128.h
Platform/Windows/: dwinstring.h  gdndc.cpp  wincli.h  windows.mak  windowsheader.h  winstring.h
PyDndEdit/: README.txt  changelog.dnd  dndbatch.pyw  dndedit.pyw  install_deps.py  setup.py
PyDndEdit/PyDndEdit/: dndedit.py
PyGdndc/: Manual.dnd  changelog.dnd  dndbatch.py  dndbatch.pyw  install_deps.py  install_deps.pyw  install_qt.pyw  pygdndc.py  pygdndc.pyw
PythonEmbed/: freeze_py_module.c  frozenstdlib.c  frozenstdlib.h  pyhead.h  pythonembed.mak
QtDndcEdit/: CMakeLists.txt  DndcEdit.cpp  DndcEdit.h  main.cpp  mainwindow.cpp  mainwindow.h
Scripts/: cdoc.py  convert.py  dsh.py  make_app.py  make_cdoc_index.py  make_docset.py  tag_and_syntax.py  win_utils.py
Scripts/clang/: cindex.py  enumerations.py
TestCases/: case1.dnd  case2.dnd  case3.dnd  case4.dnd  class_escape.dnd  javascript_protocol.dnd  oob_md.dnd  toc_escape.dnd  untrusted-css.dnd  untrusted-imports.dnd  untrusted-js.dnd
Utils/: BenchArgParse.c  ByteBuffer.h  ByteBuilder.h  MStringBuilder.h  Marray.h  Rarray.h  Rtable.h  TestArgumentParsing.c  TestBase64.c  TestByteBuilder.c  TestDsort.c  TestMStringBuilder.c  TestMsbExtension.c  TestPathUtil.c  TestRarray.c  TestStrUtils.c  argument_parsing.h  base64.h  bb_extensions.h  bb_read_bin_file.h  bit_util.h  common_macros.h  d_memory.h  debugging.h  directory_util.h  dsort.h  dsort_test_strings.h  error_handling.h  file_util.h  get_input.c  get_input.h  gi_byte_distance_completer.c  gi_byte_distance_completer.h  gi_indent_completer.h  hash_func.h  hashed_string_view.h  log_print.h  long_string.h  long_string_type.h  measure_time.h  (+20 more)
pydndc/: __main__.py  pydndc.pyi
